# workspace

./: .gitignore  AGENTS.md  Dockerfile  docker-compose.prod.yml  docker-entrypoint.sh  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tsc_output.txt  tsconfig.json  turbo.json  verify_ui.ts
.changeset/: config.json
.github/workflows/: android-build.yml  ci.yml
.jules/: bolt.md
.turbo/cache/: 09ca49ee9223e709-manifest.json  09ca49ee9223e709-meta.json  0d8643ad78fd6316-manifest.json  0d8643ad78fd6316-meta.json  0d8643ad78fd6316.tar.zst  0e73da58e474daed-manifest.json  0e73da58e474daed-meta.json  0e73da58e474daed.tar.zst  7efd06bf379b04fc-manifest.json  7efd06bf379b04fc-meta.json  918b6e93feed8a00-manifest.json  918b6e93feed8a00-meta.json  918b6e93feed8a00.tar.zst  ab8c73f91b842293-manifest.json  ab8c73f91b842293-meta.json  ab8c73f91b842293.tar.zst  c60fd65bcf90c468-manifest.json  c60fd65bcf90c468-meta.json  c60fd65bcf90c468.tar.zst  d5c0061d1601adf2-manifest.json  d5c0061d1601adf2-meta.json  d5c0061d1601adf2.tar.zst  db46c977ef51c519-manifest.json  db46c977ef51c519-meta.json  e394408397ed3ec7-manifest.json  e394408397ed3ec7-meta.json  (+6 more)
app/: page.tsx
apps/api/: .swcrc  (+9 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: main.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
docs/: WIDGET_INTEGRATION.md
lib/: auth.ts  mock-data.ts  system-messages.ts
playwright-report/: index.html
prisma/: schema.prisma
src/: middleware.ts  proxy.ts
test-results/: .last-run.json
verification/: verify_ui.mjs
(+651 files in other folders)
