[package]
name = "desktop"
version = "0.1.0"
description = "Workspace Desktop Application"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = [] }
tauri-plugin-shell = "2.1"
tauri-plugin-notification = "2.1"
tauri-plugin-deep-link = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
